--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Traffic Light Stimulator</title>
     <style>
+        html{
+        margin:0px;
+        background:skyblue;
+        }
         .traffic-light{
         width: 100px;
         height:300px;
