--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         html{
         margin:0px;
-        background:skyblue;
+        background:green;
         }
         .traffic-light{
         width: 100px;
